brat/test/golden/error/vec_length.brat.golden
Error in test/golden/error/vec_length.brat on line 2:
f(_, _, xs) = xs
              ^^

  Type mismatch when checking xs
Expected: (a1 :: Vec(VApp VPar Ex checking_check_defs_1_f_f.box_2_lambda_fake_source 0 B0, VPar Ex checking_check_defs_1_f_f.box_2_lambda_fake_source 1))
But got:  (xs :: Vec(VApp VPar Ex checking_check_defs_1_f_f.box_2_lambda_fake_source 0 B0, 1 + VPar Ex checking_check_defs_1_f_f.box_2_lambda_fake_source 1))


